# boosty_api_rs

./: Cargo.toml  README.md
src/: api_client.rs  api_response.rs  auth_provider.rs  error.rs  fetcher.rs  headers.rs  helper.rs  lib.rs  media_content.rs  model.rs  post_data_extractor.rs  post_data_extractor_test.rs  traits.rs
src/api_client/: bundle.rs  comment.rs  post.rs  showcase.rs  subscription_level.rs  target.rs  user.rs
src/api_response/: comment.rs  post.rs  reaction.rs  subscription.rs  tag.rs  target.rs  user.rs
src/model/: bundle.rs  comment.rs  common.rs  post.rs  showcase.rs  subscription.rs  subscription_level.rs  target.rs  user.rs
tests/: api_client_test.rs  bundle.rs  comment.rs  helpers.rs  post.rs  showcase.rs  subscription.rs  target.rs
tests/fixtures/: api_response_bundle_items.json  api_response_bundles.json  api_response_comments.json  api_response_comments_list_page1.json  api_response_posts.json  api_response_showcase.json  api_response_subscription_levels.json  api_response_subscriptions.json  api_response_targets.json  api_response_video_image.json
