[package]
name = "roosty_downloader_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
mockito = "1.7.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
