[package]
name = "boosty_api"
version = "0.14.0"
edition = "2024"
description = "API client for interacting with Boosty platform"
license = "MIT"
repository = "https://github.com/ath31st/boosty_api_rs"
readme = "README.md"
keywords = ["api", "boosty", "client", "http", "async"]
categories = ["api-bindings", "web-programming"]
documentation = "https://docs.rs/boosty_api"

[dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
mockito = "1.7.0"
